--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,8 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
+      Pkg.clone(\"https://github.com/blegat/MultivariatePolynomials.jl\");
+      Pkg.clone(\"https://github.com/blegat/PolyJuMP.jl\");
       Pkg.clone(pwd(), \"SumOfSquares\"); Pkg.build(\"SumOfSquares\")"
 
 test_script:
