--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
   email: false
 before_script:
   - julia -e 'Pkg.clone("git://github.com/blegat/MultivariatePolynomials.jl.git")'
-  - julia -e 'Pkg.clone("git://github.com/blegat/PolyJuMP.jl.git")'
+  - julia -e 'Pkg.clone("git://github.com/JuliaOpt/PolyJuMP.jl.git")'
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
