--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ build_script:
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
       Pkg.clone(\"https://github.com/blegat/MultivariatePolynomials.jl\");
-      Pkg.clone(\"https://github.com/blegat/PolyJuMP.jl\");
+      Pkg.clone(\"https://github.com/JuliaOpt/PolyJuMP.jl\");
       Pkg.clone(pwd(), \"SumOfSquares\"); Pkg.build(\"SumOfSquares\")"
 
 test_script:
