--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ notifications:
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("SumOfSquares"); Pkg.test("SumOfSquares"; coverage=true)'
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+        sudo apt-get install liblapack-dev libblas-dev; # For CSDP
+    fi
 before_script:
   - julia -e 'Pkg.clone("git://github.com/JuliaOpt/PolyJuMP.jl.git")'
 after_success:
