--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,9 @@ build_script:
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
       Pkg.clone(\"https://github.com/blegat/MultivariatePolynomials.jl\");
+      Pkg.clone(\"git://github.com/blegat/SemialgebraicSets.jl.git\");
+      Pkg.clone(\"git://github.com/blegat/MultivariateMoments.jl.git\");
+      Pkg.clone(\"git://github.com/blegat/DynamicPolynomials.jl.git\");
       Pkg.clone(\"https://github.com/JuliaOpt/PolyJuMP.jl\");
       Pkg.clone(pwd(), \"SumOfSquares\"); Pkg.build(\"SumOfSquares\")"
 
