--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
+before_script:
+  - julia -e 'Pkg.add("SemialgebraicSets"); Pkg.checkout("SemialgebraicSets")'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
