--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
+      Pkg.add(\"SemialgebraicSets\"); Pkg.checkout(\"SemialgebraicSets\");
       Pkg.clone(pwd(), \"SumOfSquares\"); Pkg.build(\"SumOfSquares\")"
 
 test_script:
