--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ after_success:
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("Polyhedra")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("SumOfSquares")); include(joinpath("docs", "make.jl"))'
