--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_install:
     fi
 
 before_script:
-  - julia -e 'Pkg.clone("https://github.com/JuliaOpt/PolyJuMP.jl.git")'
+  - julia -e 'Pkg.add("PolyJuMP")'
+  - julia -e 'Pkg.checkout("PolyJuMP")'
+  - julia -e 'Pkg.checkout("PolyJuMP", "default-module")'
 
 after_success:
   # push coverage results to Coveralls
