--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 before_script:
   - julia -e 'Pkg.add("PolyJuMP")'
   - julia -e 'Pkg.checkout("PolyJuMP")'
-  - julia -e 'Pkg.checkout("PolyJuMP", "bl/default-set")'
+  - julia -e 'Pkg.checkout("PolyJuMP", "default-module")'
 
 after_success:
   # push coverage results to Coveralls
