--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,7 @@ notifications:
 before_script:
   - julia -e 'Pkg.add("JuMP")'
   - julia -e 'Pkg.add("PolyJuMP")'
-  - julia -e 'Pkg.clone("https://github.com/JuliaOpt/MathOptInterface.jl.git")'
-  - julia -e 'Pkg.clone("https://github.com/JuliaOpt/MathOptInterfaceUtilities.jl.git")'
-  - julia -e 'Pkg.checkout("JuMP", "jump/moi")'
-  - julia -e 'Pkg.checkout("PolyJuMP", "moi")'
+  - julia -e 'Pkg.checkout("JuMP")'
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
