--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,17 @@ os:
   - osx
 julia:
   - 0.6
+  - 0.7
+  - 1.0
 notifications:
   email: false
-before_script:
-  - julia -e 'Pkg.add("JuMP")'
-  - julia -e 'Pkg.checkout("JuMP")'
-  - julia -e 'Pkg.add("PolyJuMP")'
-  - julia -e 'Pkg.checkout("PolyJuMP")'
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("SumOfSquares"); Pkg.test("SumOfSquares"; coverage=true)'
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
-
+before_script:
+  - julia -e 'if VERSION >= v"0.7-"; using Pkg; Pkg.add(PackageSpec(name="JuMP", rev="master")); else Pkg.add("JuMP"); Pkg.checkout("JuMP"); end'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
