--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,17 @@ os:
   - osx
 julia:
   - 0.6
+  - 0.7
+  - 1.0
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("SumOfSquares"); Pkg.test("SumOfSquares"; coverage=true)'
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
-
+before_script:
+    - julia -e 'if VERSION >= v"0.7-"; using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="master")); else Pkg.add("PolyJuMP"); Pkg.checkout("PolyJuMP"); end'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
