--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ jobs:
     - stage: "Documentation"
       julia: 1.0
       os: linux
+      before_script:
+        - julia -e 'if VERSION >= v"0.7-"; using Pkg; Pkg.add(PackageSpec(name="JuMP", rev="master")); else Pkg.add("JuMP"); Pkg.checkout("JuMP"); end'
+        - julia -e 'if VERSION >= v"0.7-"; using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="master")); else Pkg.add("PolyJuMP"); Pkg.checkout("PolyJuMP"); end'
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
                                     Pkg.develop(PackageSpec(path=pwd()))'
