--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 before_script:
   - julia -e 'using Pkg; Pkg.add(PackageSpec(name="MathOptInterface", rev="master"))'
   - julia -e 'using Pkg; Pkg.add(PackageSpec(name="JuMP", rev="master"))'
-  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="bl/add_constraint"))'
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="master"))'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
