--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,7 @@ before_install:
 before_script:
   - julia -e 'using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="master"))'
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("SumOfSquares")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); cd(Pkg.dir("SumOfSquares")); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
 jobs:
   include:
     - stage: "Documentation"
