--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
+before_script:
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="master"))'
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); cd(Pkg.dir("SumOfSquares")); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
 jobs:
