--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+codecov: true
+coveralls: true
 os:
   - linux
   - osx
@@ -13,8 +15,8 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
-after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); cd(Pkg.dir("SumOfSquares")); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
+before_script:
+    - julia -e 'using Pkg;  Pkg.add(PackageSpec(name="PolyJuMP", rev="master"))'
 jobs:
   include:
     - stage: "Documentation"
