--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ os:
 julia:
   - 1.0
   - 1.1
+  - 1.2
+before_script:
+  - julia -e 'using Pkg; Pkg.add([PackageSpec(name="JuMP", rev="master"), PackageSpec(name="PolyJuMP", rev="bl/moiv0.9")])'
 notifications:
   email: false
 before_install:
