--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get install liblapack-dev libblas-dev; # For CSDP
     fi
+before_script:
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="CSDP", rev="bl/refactor"))'
 jobs:
   include:
     - stage: "Documentation"
