--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SumOfSquares"
 uuid = "4b9e565b-77fc-50a5-a571-1244f986bda1"
 repo = "https://github.com/JuliaOpt/SumOfSquares.jl.git"
-version = "0.3.5"
+version = "0.3.6"
 
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -9,19 +9,19 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MultivariateMoments = "f4abf1af-0426-5881-a0da-e2f168889b5e"
 MultivariatePolynomials = "102ac46a-7ee4-5c85-9060-abc95bfdeaa3"
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PolyJuMP = "ddf597a6-d67e-5340-b84c-e37d84115374"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SemialgebraicSets = "8e049039-38e8-557d-ae3a-bc521ccf6204"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-DynamicPolynomials = "≥ 0.1.3"
+DynamicPolynomials = "0.3.3"
 JuMP = "0.20"
 MathOptInterface = "~0.9.7"
-MultivariateMoments = "≥ 0.2.1"
+MultivariateMoments = "0.2.3"
 MultivariatePolynomials = "~0.3"
-PolyJuMP = "0.3.3"
+PolyJuMP = "0.3.4"
+Reexport = "0.2"
 SemialgebraicSets = "0.2"
 julia = "1"
 
