[ci skip] Add SDPNAL

--- a/test/Solvers/Project.toml
+++ b/test/Solvers/Project.toml
@@ -11,6 +11,7 @@ ProxSDP = "65e78d25-6039-50a4-9445-38022e3d2eb3"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 SDPA = "b9a10b5b-afa4-512f-a053-bb3d8080febc"
 SDPAFamily = "bfe18334-aefd-11e9-1109-4bf2b15a5b91"
+SDPNAL = "f7a9608b-7678-5329-8a05-97541ebc462c"
 SDPT3 = "e33b2407-87ff-50a0-8b27-f0fe7855237d"
 SeDuMi = "a895aaad-f784-5544-9392-bb281339c1b2"
 SemialgebraicSets = "8e049039-38e8-557d-ae3a-bc521ccf6204"
