Move options_pricing to Tests

--- a/test/Solvers/Project.toml
+++ b/test/Solvers/Project.toml
@@ -6,7 +6,9 @@ ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
 MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
+MultivariateMoments = "f4abf1af-0426-5881-a0da-e2f168889b5e"
 ProxSDP = "65e78d25-6039-50a4-9445-38022e3d2eb3"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 SDPA = "b9a10b5b-afa4-512f-a053-bb3d8080febc"
