--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ julia:
   - 1.3
 notifications:
   email: false
+before_script:
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaAlgebra/MultivariateBases.jl", rev="master"))'
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="MultivariateMoments", rev="bl/basis"))'
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="PolyJuMP", rev="bl/basis"))'
 before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
