--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ environment:
   - julia_version: 1
   - julia_version: 1.3
   - julia_version: 1.4
+  - julia_version: nightly
 
 platform:
   - x86 # 32-bit
@@ -11,7 +12,7 @@ platform:
 # This is left as an example for the next big version switch.
 #matrix:
 #  allow_failures:
-#  - julia_version: latest
+#  - julia_version: nightly
 
 branches:
   only:
