--- a/Project.toml
+++ b/Project.toml
@@ -17,12 +17,14 @@ SemialgebraicSets = "8e049039-38e8-557d-ae3a-bc521ccf6204"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
+DynamicPolynomials = "0.3.6"
+JuMP = "0.21"
 MathOptInterface = "~0.9.9"
 MultivariateBases = "0.1.1"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "~0.3.5"
 MutableArithmetics = "0.2"
-PolyJuMP = "0.3.5"
+PolyJuMP = "0.4.0"
 Reexport = "0.2"
 SemialgebraicSets = "0.2"
 julia = "1"
