--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,9 @@ jobs:
                                     Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs/ docs/make.jl
       after_success: skip
+    - stage: "Examples"
+      julia: 1
+      os: linux
+      script:
+        - julia --project=examples -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=examples --color=yes examples/run_examples.jl
