--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,4 +5,4 @@ Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 SumOfSquares = "4b9e565b-77fc-50a5-a571-1244f986bda1"
 
 [compat]
-Documenter = "~0.24"
+Documenter = "0.25"
