--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,12 @@ before_install:
 jobs:
   include:
     - stage: "Documentation"
-      julia: 1.0
+      julia: 1
       os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
                                     Pkg.add("DynamicPolynomials");
+                                    Pkg.add(PackageSpec(url="https://github.com/blegat/Documenter.jl", rev="latexout"));
                                     Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs/ docs/make.jl
       after_success: skip
