--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ jobs:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
                                     Pkg.add("DynamicPolynomials");
                                     Pkg.add(PackageSpec(url="https://github.com/blegat/Documenter.jl", rev="latexout"));
+                                    Pkg.add(PackageSpec(name="MathOptInterface", rev="master"));
                                     Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs/ docs/make.jl
       after_success: skip
@@ -31,5 +32,7 @@ jobs:
       julia: 1
       os: linux
       script:
-        - julia --project=examples -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=examples -e 'using Pkg; Pkg.instantiate();
+                                       Pkg.add(PackageSpec(name="MathOptInterface", rev="master"));
+                                       Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=examples --color=yes examples/run_examples.jl
