--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.4.4"
 
 [deps]
 ComplexOptInterface = "25c3070e-1275-41b5-afef-2f982c87090a"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
@@ -19,6 +20,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 ComplexOptInterface = "0.0.2"
+DataStructures = "0.18"
 DynamicPolynomials = "0.3.6"
 JuMP = "0.21"
 MathOptInterface = "0.9.18"
