--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -4,6 +4,7 @@ Cyclotomics = "da8f5974-afbb-4dc8-91d8-516d5257c83b"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MultivariateBases = "be282fd4-ad43-11e9-1d11-8bd9d7e43378"
 MultivariatePolynomials = "102ac46a-7ee4-5c85-9060-abc95bfdeaa3"
