--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -5,6 +5,7 @@ Cyclotomics = "da8f5974-afbb-4dc8-91d8-516d5257c83b"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
+GroupsCore = "d5909c97-4eac-4ecc-a3dc-fdd0858a4120"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
