--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -16,3 +16,4 @@ PermutationGroups = "8bc5a954-2dfc-11e9-10e6-cd969bffa420"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SumOfSquares = "4b9e565b-77fc-50a5-a571-1244f986bda1"
+SymbolicWedderburn = "858aa9a9-4c7c-4c62-b466-2421203962a2"
