CompatHelper: bump compat for MathOptInterface to 0.10, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ ComplexOptInterface = "0.0.2"
 DataStructures = "0.18"
 DynamicPolynomials = "0.3.6"
 JuMP = "0.21.7"
-MathOptInterface = "0.9.18"
+MathOptInterface = "0.9.18, 0.10"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "~0.3.5"
