CompatHelper: bump compat for MutableArithmetics to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ MathOptInterface = "0.9.18"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "~0.3.5"
-MutableArithmetics = "0.2"
+MutableArithmetics = "0.2, 0.3"
 PolyJuMP = "0.4.2"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
