--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ JuMP = "0.21.7"
 MathOptInterface = "0.9.18"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
-MultivariatePolynomials = "~0.3.5"
+MultivariatePolynomials = "~0.3.5, 0.4"
 MutableArithmetics = "0.2"
 PolyJuMP = "0.4.2"
 Reexport = "0.2, 1.0"
