--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ MutableArithmetics = "0.2"
 PolyJuMP = "0.4.2"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
-SymbolicWedderburn = "0.1"
+SymbolicWedderburn = "0.1, 0.2"
 julia = "1"
 
 [extras]
