CompatHelper: bump compat for JuMP to 0.22, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Combinatorics = "1"
 ComplexOptInterface = "0.0.2"
 DataStructures = "0.18"
 DynamicPolynomials = "0.3.6"
-JuMP = "0.21.7"
+JuMP = "0.21.7, 0.22"
 MathOptInterface = "0.9.18"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
