--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "~0.3.5"
 MutableArithmetics = "0.2"
-PolyJuMP = "0.4.2"
+PolyJuMP = "0.4.2, 0.5"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
 SymbolicWedderburn = "0.2"
