Update to JuMP v0.22, MOI v0.14, MP v0.4, MA, v0.3

--- a/Project.toml
+++ b/Project.toml
@@ -25,13 +25,13 @@ Combinatorics = "1"
 ComplexOptInterface = "0.0.2"
 DataStructures = "0.18"
 DynamicPolynomials = "0.3.6"
-JuMP = "0.21.7"
-MathOptInterface = "0.9.18"
+JuMP = "0.22"
+MathOptInterface = "0.10"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
-MultivariatePolynomials = "~0.3.5"
-MutableArithmetics = "0.2"
-PolyJuMP = "0.4.2"
+MultivariatePolynomials = "0.4"
+MutableArithmetics = "0.3"
+PolyJuMP = "0.5"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
 SymbolicWedderburn = "0.2"
