--- a/Project.toml
+++ b/Project.toml
@@ -22,16 +22,16 @@ SymbolicWedderburn = "858aa9a9-4c7c-4c62-b466-2421203962a2"
 
 [compat]
 Combinatorics = "1"
-ComplexOptInterface = "0.0.2"
+ComplexOptInterface = "0.0.3"
 DataStructures = "0.18"
-DynamicPolynomials = "0.3.6"
-JuMP = "0.21.7"
-MathOptInterface = "0.9.18"
+DynamicPolynomials = "0.4.1"
+JuMP = "0.22"
+MathOptInterface = "0.10"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
-MultivariatePolynomials = "~0.3.5"
-MutableArithmetics = "0.2"
-PolyJuMP = "0.4.2"
+MultivariatePolynomials = "0.4"
+MutableArithmetics = "0.3"
+PolyJuMP = "0.5.1"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
 SymbolicWedderburn = "0.2"
