--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ MathOptInterface = "0.10"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "0.4"
-MutableArithmetics = "0.3"
+MutableArithmetics = "0.3, 1"
 PolyJuMP = "0.5.1"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
