CompatHelper: bump compat for MathOptInterface to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ ComplexOptInterface = "0.0.3"
 DataStructures = "0.18"
 DynamicPolynomials = "0.4.1"
 JuMP = "0.22"
-MathOptInterface = "0.10"
+MathOptInterface = "0.10, 1"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "0.4"
