CompatHelper: bump compat for JuMP to 0.23, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Combinatorics = "1"
 ComplexOptInterface = "0.0.3"
 DataStructures = "0.18"
 DynamicPolynomials = "0.4.1"
-JuMP = "0.22"
+JuMP = "0.22, 0.23"
 MathOptInterface = "0.10"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
