--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ SymbolicWedderburn = "858aa9a9-4c7c-4c62-b466-2421203962a2"
 
 [compat]
 Combinatorics = "1"
-ComplexOptInterface = "0.0.3"
+ComplexOptInterface = "0.0.3, 0.1"
 DataStructures = "0.18"
 DynamicPolynomials = "0.4.1"
 JuMP = "0.22"
