--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           # Build documentation on the latest Julia 1.x
           version: '1'
+      - name: SymbolicWedderburn#master
+        shell: julia --project=@. {0}
+        run: |
+          using Pkg
+          Pkg.add(PackageSpec(name="SymbolicWedderburn", rev="master"))
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
                                        Pkg.add("DynamicPolynomials");
