--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
           # Build documentation on the latest Julia 1.x
           version: '1'
       - name: SymbolicWedderburn#master
-        shell: julia --project=@. {0}
+        shell: julia --project=docs/ {0}
         run: |
           using Pkg
           Pkg.add(PackageSpec(name="SymbolicWedderburn", rev="master"))
