--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ MutableArithmetics = "1"
 PolyJuMP = "0.6"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.2"
-SymbolicWedderburn = "0.2"
+SymbolicWedderburn = "0.2, 0.3"
 julia = "1.6"
 
 [extras]
