--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Combinatorics = "1"
 ComplexOptInterface = "0.1"
 DataStructures = "0.18"
 DynamicPolynomials = "0.4.1"
-JuMP = "0.23"
+JuMP = "0.23, 1"
 MathOptInterface = "1"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
