Update Solvers tests

--- a/test/Solvers/Project.toml
+++ b/test/Solvers/Project.toml
@@ -2,6 +2,7 @@
 CDCS = "4fe2ecd4-b952-581a-b4b6-a532675a646e"
 COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 CSDP = "0a46da34-8e4b-519e-b418-48813639ff34"
+DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
 ECOS = "e2685f51-7e38-5353-a97d-a921fd2c8199"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -14,7 +15,6 @@ PolyJuMP = "ddf597a6-d67e-5340-b84c-e37d84115374"
 ProxSDP = "65e78d25-6039-50a4-9445-38022e3d2eb3"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 SDPA = "b9a10b5b-afa4-512f-a053-bb3d8080febc"
-SDPAFamily = "bfe18334-aefd-11e9-1109-4bf2b15a5b91"
 SDPNAL = "f7a9608b-7678-5329-8a05-97541ebc462c"
 SDPT3 = "e33b2407-87ff-50a0-8b27-f0fe7855237d"
 SeDuMi = "a895aaad-f784-5544-9392-bb281339c1b2"
