CompatHelper: bump compat for MultivariatePolynomials to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ JuMP = "1.5"
 MathOptInterface = "1.13"
 MultivariateBases = "0.1.2"
 MultivariateMoments = "0.3"
-MultivariatePolynomials = "0.4"
+MultivariatePolynomials = "0.4, 0.5"
 MutableArithmetics = "1"
 PolyJuMP = "0.6"
 Reexport = "0.2, 1.0"
