CompatHelper: bump compat for MultivariateBases to 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Combinatorics = "1"
 DataStructures = "0.18"
 JuMP = "1.5"
 MathOptInterface = "1.13"
-MultivariateBases = "0.1.2"
+MultivariateBases = "0.1.2, 0.2"
 MultivariateMoments = "0.3"
 MultivariatePolynomials = "0.4"
 MutableArithmetics = "1"
