CompatHelper: bump compat for MultivariateMoments to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ DataStructures = "0.18"
 JuMP = "1.5"
 MathOptInterface = "1.13"
 MultivariateBases = "0.1.2"
-MultivariateMoments = "0.3"
+MultivariateMoments = "0.3, 0.4"
 MultivariatePolynomials = "0.4"
 MutableArithmetics = "1"
 PolyJuMP = "0.6"
