Fix semisimple -> simple in symmetry reduction (#308)
* Fix semisimple -> simple in symmetry reduction

* Fixes

* Update Project's

* Fix doc build

* Fix ci

* Fix

* Remove Combinatorics

* Fix

* Fix format

* Fix examples ci

* Add missing docstrings

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,14 +22,11 @@ jobs:
         run: |
           using Pkg
           Pkg.add([
-              PackageSpec(name="SemialgebraicSets", rev="master"),
-              PackageSpec(name="MultivariateBases", rev="master"),
-              PackageSpec(name="MultivariatePolynomials", rev="master"),
-              PackageSpec(name="DynamicPolynomials", rev="master"),
-              PackageSpec(name="TypedPolynomials", rev="master"),
-              PackageSpec(name="MultivariateMoments", rev="master"),
               PackageSpec(name="PolyJuMP", rev="master"),
               PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="solve"),
+              PackageSpec(url="https://github.com/blegat/PolynomialTestSystems.jl", rev="fix"),
+              PackageSpec(url="https://github.com/blegat/MixedSubdivisions.jl", rev="MP@v0.5"),
+              PackageSpec(url="https://github.com/blegat/ImplicitPlots.jl", rev="mpv0.5"),
               PackageSpec(path=pwd()),
           ])
           Pkg.instantiate()
