CompatHelper: bump compat for PolyJuMP to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ MultivariateBases = "0.2"
 MultivariateMoments = "0.4"
 MultivariatePolynomials = "0.5"
 MutableArithmetics = "1"
-PolyJuMP = "0.7"
+PolyJuMP = "0.7, 0.6"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.3"
 SymbolicWedderburn = "0.3"
