Try 32-bit on Julia v1.10 (#331)
* Try 32bit on Julia v1.10

* nightly

* Remove

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,10 @@ jobs:
           - version: '1'
             os: ubuntu-latest
             arch: x64
-          - version: '1'
-            os: ubuntu-latest
-            arch: x86
+# # See https://github.com/jump-dev/SumOfSquares.jl/pull/331
+#          - version: 'nightly'
+#            os: ubuntu-latest
+#            arch: x86
 #          - version: 'nightly'
 #            os: ubuntu-latest
 #            arch: x64
