Update to StarAlgebras

--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ PolyJuMP = "ddf597a6-d67e-5340-b84c-e37d84115374"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SemialgebraicSets = "8e049039-38e8-557d-ae3a-bc521ccf6204"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StarAlgebras = "0c0c59c1-dc5f-42e9-9a8b-b5dc384a6cd1"
 SymbolicWedderburn = "858aa9a9-4c7c-4c62-b466-2421203962a2"
 
 [compat]
@@ -29,5 +30,5 @@ MutableArithmetics = "1"
 PolyJuMP = "0.7"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.3"
-SymbolicWedderburn = "0.3"
+SymbolicWedderburn = "0.4"
 julia = "1.6"
