--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,6 +22,11 @@ jobs:
         run: |
           using Pkg
           Pkg.add([
+              PackageSpec(name="MathOptInterface", rev="master"),
+              PackageSpec(name="StarAlgebras", rev="mk/non_monomial_basis"),
+              PackageSpec(name="MultivariateBases", rev="master"),
+              PackageSpec(name="MultivariateMoments", rev="master"),
+              PackageSpec(name="PolyJuMP", rev="master"),
               PackageSpec(path=pwd()),
           ])
           Pkg.instantiate()
