--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
               PackageSpec(name="MathOptInterface", rev="master"),
               PackageSpec(name="StarAlgebras", rev="mk/non_monomial_basis"),
               PackageSpec(name="MultivariateBases", rev="master"),
+              PackageSpec(name="SemialgebraicSets", rev="master"),
               PackageSpec(name="MultivariateMoments", rev="master"),
               PackageSpec(name="PolyJuMP", rev="master"),
           ])
