--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,9 +23,9 @@ jobs:
           using Pkg
           Pkg.add([
               PackageSpec(name="MathOptInterface", rev="bl/set_map_type"),
-              PackageSpec(name="StarAlgebras", rev="bl/sos"),
+              PackageSpec(name="StarAlgebras", rev="main"),
               PackageSpec(name="SymbolicWedderburn", rev="mk/StarAlgebras_0_3"),
-              PackageSpec(name="MultivariateBases", rev="bl/sos"),
+              PackageSpec(name="MultivariateBases", rev="master"),
               PackageSpec(name="SemialgebraicSets", rev="master"),
               PackageSpec(name="MultivariateMoments", rev="master"),
               PackageSpec(name="PolyJuMP", rev="master"),
