Use WeightedSOSCone by default (#355)
* Use Variable.KernelBridge by default

* Fixes

* Fixes

* Update to StarAlgebras

* Fixes

* Use basis, not monomials in SOSPolynomialSet

* Fixes

* Fix format

* Fixes

* Fix format

* Fixes

* Fix format

* up

* up

* Fixes

* Fixes

* Fix

* GLPK tests working

* Fix format

* Fixes

* Fix format

* Fixes

* Fixes

* Fixes

* Fix format

* Fix

* Fixes

* WIP

* WIP

* WIP

* up

* Fixes

* Missing canonical

* Fixes

* up

* up

* Fixes

* Fixes

* up

* Fixes

* Fixes

* Fixes

* Fixes

* Remove debug

* Remove debug

* Fixes

* up

* Fxies

* Fixes

* Fixes

* SCS tests passing

* Simplifty

* Fixes

* Fix format

* Fixes

* up ci

* Fix format

* Fixes

* Fix

* Fixes

* Update .github/workflows/ci.yml

* Fix @kwdef for Julia v1.6

* fix format

* Fixes

* Fixes

* Update ci

* Fix format

* Fixes

* Fix format

* Fix

* Disable symmetry

* Update script of examples

* Fixes

* Fixes

* Fixes

* Fix

* Fixes

* Fix

* Fixes

* Fixes

* Update ci script

* Fixes

* Fix

* Fix doc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 #            arch: x64
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v1
+      - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
@@ -37,8 +37,12 @@ jobs:
         run: |
           using Pkg
           Pkg.add([
+              PackageSpec(name="StarAlgebras", rev="main"),
+              PackageSpec(name="SymbolicWedderburn", rev="mk/StarAlgebras_0_3"),
               PackageSpec(name="MultivariateBases", rev="master"),
-              PackageSpec(name="MathOptInterface", rev="master"),
+              PackageSpec(name="SemialgebraicSets", rev="master"),
+              PackageSpec(name="MultivariateMoments", rev="master"),
+              PackageSpec(name="PolyJuMP", rev="master"),
           ])
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
