CompatHelper: add new compat entry for StarAlgebras at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,5 +30,6 @@ MutableArithmetics = "1"
 PolyJuMP = "0.7"
 Reexport = "0.2, 1.0"
 SemialgebraicSets = "0.3"
+StarAlgebras = "0.2"
 SymbolicWedderburn = "0.4"
 julia = "1.6"
